---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: ????
  Info:
    - Keep the render object invisible until it is set to frame 0 again
    - Variable for how long to wait with removing the scaffold after everything is done
    - Satisfactory finish to the animation
    - Refractor animation end
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2024. 11. 03
  Info:
    - Make the mod require space age/travel (for the platform construction animation)
    - Make the space platform build animations usable in luarendering
    - Animation offset my ass
    - Fix the animation offset being based on the current game tick
    - Cleanup the animation trial and error
    - Run the animation for each of the entity's tiles
    - Draw the appropriate piece based on the offset
    - Do not trigger on platforms
    - Use the correct render layers
    - Control the pacing of the animation entirely from lua
    - Move some magic numbers to constants
    - Attempt to animate the destruction nicely too
    - Animation frame is 0 based, so 32 would wrap around to frame 1
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2024. 10. 20
  Info:
    - Turn construction robots invisible
    - Stash leftovers from october 20 (post radar range lag)
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 10. 18
  Info:
    - Experiment with teleporting each bot to their target
    - Debug that the target can be nil
    - Prevent crash when the target is nil
    - Leave another comment
    - Cleanup prototype code
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 10. 17
  Info:
    - Initial commit